# git-nomad

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  asciinema.cast  asciinema_env.sh  crates.js  demo.asciinema.cast  demo.doitlive.sh  flake.nix  help.html  release_commit.sh  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
bitflags/: all.html  index.html  macro.bitflags.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
clap/: all.html  enum.ArgAction.html  enum.ColorChoice.html  enum.ValueHint.html  index.html  macro.arg.html  macro.command.html  macro.crate_authors.html  macro.crate_description.html  macro.crate_name.html  macro.crate_version.html  macro.value_parser.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Command.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_builder/: all.html  enum.ColorChoice.html  index.html  macro.arg.html  macro.command.html  macro.crate_authors.html  macro.crate_description.html  macro.crate_name.html  macro.crate_version.html  macro.value_parser.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_complete/: all.html  enum.ValueHint.html  index.html
clap_lex/: all.html  enum.SeekFrom.html  index.html  struct.ArgCursor.html  struct.ParsedArg.html  struct.RawArgs.html  struct.ShortFlags.html  trait.OsStrExt.html
console/: all.html  fn.strip_ansi_codes.html  index.html  struct.AnsiCodeIterator.html
demo/: compare.sh  demo.sh  record.sh  upload.sh
fastrand/: all.html  fn.alphabetic.html  fn.alphanumeric.html  fn.bool.html  fn.char.html  fn.choice.html  fn.choose_multiple.html  fn.digit.html  fn.f32.html  fn.f64.html  fn.get_seed.html  fn.i128.html  fn.i16.html  fn.i32.html  fn.i64.html  fn.i8.html  fn.isize.html  fn.lowercase.html  fn.seed.html  fn.shuffle.html  fn.u128.html  fn.u16.html  fn.u32.html  fn.u64.html  fn.u8.html  fn.uppercase.html  fn.usize.html  index.html  struct.Rng.html
git_nomad/: all.html  constant.BUILD_VERSION.html  constant.CONFIG_HOST.html  fn.cli.html  (+18 more)
(+11213 files in other folders)
