[package]
name = "git-nomad"
version = "0.8.0"
authors = ["Ronuk Raval <ronuk.raval@gmail.com>"]
edition = "2021"
description = "Synchronize work-in-progress git branches in a light weight fashion"
repository = "https://github.com/rraval/git-nomad"
license = "MIT"

[dependencies]
anyhow = "^1.0.95"
clap_complete = "4.5.41"
console = "^0.15.10"
git-version = "^0.3.9"
indicatif = "^0.17.11"
tempfile = "^3.10.1"
whoami = "^1.5.2"

[dependencies.clap]
version = "^4.5.31"
default-features = false
features = [
    "std",
    # turn color off since this is a barebones CLI
    # "color",
    "help",
    "usage",
    "error-context",
    "suggestions",

    "cargo",
    "env",
    "wrap_help",
    "string",
]
