[package]
name = "git-nomad"
version = "0.9.0"
authors = ["Ronuk Raval <ronuk.raval@gmail.com>"]
edition = "2024"
description = "Synchronize work-in-progress git branches in a light weight fashion"
repository = "https://github.com/rraval/git-nomad"
license = "MIT"

[dependencies]
anyhow = "^1.0.100"
clap_complete = "4.5.60"
console = "^0.16.1"
git-version = "^0.3.9"
indicatif = "^0.18.2"
tempfile = "^3.23.0"
whoami = "^1.6.0"

[dependencies.clap]
version = "^4.5.51"
default-features = false
features = [
    "std",
    # turn color off since this is a barebones CLI
    # "color",
    "help",
    "usage",
    "error-context",
    "suggestions",

    "cargo",
    "env",
    "wrap_help",
    "string",
]
